--- a/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
+++ b/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
@@ -1,6 +1,6 @@
 ---
 title: "윈도 작업 환경을 기록한다" 
-description: 네이티브와 WSL의 콜래버    
+description: 네이티브와 WSL의 컬래버    
 author: "JS HUHH"
 date: "11/03/2023"
 image: "./images/cat-windows.webp"
