--- a/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
+++ b/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
@@ -20,7 +20,7 @@ format:
 ---
 
 ## TL; DR
-윈도우 작업 환경을 만드는 방법을 기록한다. 내용은 변화에 따라서 조금씩 변해갈 것이다.  
+윈도우에서 WSL(WIndows Subsystem for Linux) 작업 환경을 만드는 방법을 기록한다. 내용은 변화에 따라서 조금씩 변해갈 것이다.  
 
 ## 넋두리 
 앞서 윈도에 관한 여러 포스트를 게재했다. 그런데 그 내용 중에서 이제는 쓰지 않는 것도 있다. 이 글은 '현재'를 바라보면서 윈도에서 어떤 작업환경을 유지하고 있는지를 기록하는 내용이다. 
@@ -64,12 +64,11 @@ winget으로 설치할 수 있는 소프트웨어 확인은 아래 웹 사이트
 
 ### 설치 
 
-과거 윈도11 버전에서는 WSL 기능을 활성화한 후 배포판을 별도로 다운로드 받아서 설치했다. 이제는 아래 명령어를 통해서 WSL 기능을 활성화하고 Ubuntu 배포판까지 한번에 설치할 수 있다. 
+과거 윈도11 버전에서는 WSL 기능을 활성화한 후 배포판을 별도로 다운로드 받아서 설치했다. 이제는 아래 명령어를 통해서 WSL 기능을 활성화하고 Ubuntu 디폴트 배포판까지 한번에 설치할 수 있다. 
 
 ```cmd
 > wsl --install
 ```
-
 디폴트 배포판을 바꾸는 법, 배포판을 삭제하는 방법 등은 아래 링크를 참고하자. 
 
 🔗 [WSL MS 공식 설치 가이드](https://learn.microsoft.com/en-us/windows/wsl/install)
@@ -80,6 +79,11 @@ winget으로 설치할 수 있는 소프트웨어 확인은 아래 웹 사이트
 > wsl --install -d <Distribution Name> # 특정 배포판 설치 
 > wsl --unregister <Distribution Name> # 특정 배포판 삭제
 ```
+
+:::{.column-margin}
+1. [수동으로 설치하기](https://learn.microsoft.com/en-us/windows/wsl/install-manual)
+2. [삭제 및 배포판 내리기](https://learn.microsoft.com/en-us/windows/wsl/basic-commands#unregister-or-uninstall-a-linux-distribution)
+:::
 
 ## Ubuntu 관리 및 필수 앱 설치 
 
