--- a/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
+++ b/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
@@ -1,6 +1,6 @@
 ---
 title: "윈도 작업 환경을 기록한다" 
-description: 네이티브와 WSL의 컬래버    
+description: Windows와 Linux의 컬래버    
 author: "JS HUHH"
 date: "11/03/2023"
 image: "./images/cat-windows.webp"
@@ -90,6 +90,17 @@ winget으로 설치할 수 있는 소프트웨어 확인은 아래 웹 사이트
 아래 링크를 참고하자. 
 
 🔗 [Ubuntu를 깔고 먼저 해야 할 일들](../computer-tool/2023-11-03-first-thing-ubuntu.html)
+
+## VS Code 
+
+VS 코드는 이 협업의 핵심이다. VS 코드는 윈도에 있다. 하지만 이 녀석은 WSL의 리눅스와 윈도를 긴밀하게 연결한다. WSL 내 위치하는 어떤 폴더에서 코딩 작업을 하고 싶다면, WSL에서 아래와 같이 타이핑하자. 
+
+```bash
+# 원하는 폴더 내에서 
+> code . 
+```
+
+이 명령어는 `파일 > 작업 영역에 폴더 추가`를 한방에 실행해준다. 해당 폴더가 작업 영역에 추가되기 때문에 여러가지 작업을 편리하게 진행할 수 있다. 
 
 
 
