--- a/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
+++ b/posts/walk-through/2023-11-03-definitive-guide-to-windows.qmd
@@ -93,7 +93,7 @@ winget으로 설치할 수 있는 소프트웨어 확인은 아래 웹 사이트
 
 ## VS Code 
 
-VS 코드는 이 협업의 핵심이다. VS 코드는 윈도에 있다. 하지만 이 녀석은 WSL의 리눅스와 윈도를 긴밀하게 연결한다. WSL 내 위치하는 어떤 폴더에서 코딩 작업을 하고 싶다면, WSL에서 아래와 같이 타이핑하자. 
+VS 코드는 이 협업의 핵심이다. VS 코드는 윈도에 있다. 하지만 이 녀석은 WSL의 리눅스와 윈도를 긴밀하게 연결한다. WSL 내 위치하는 어떤 폴더에서 코딩 작업을 하고 싶다면, WSL이 활성화된 터미널에서 아래와 같이 실행하자. 
 
 ```bash
 # 원하는 폴더 내에서 
