--- a/posts/regression/2020-11-11-log-linear-regression.qmd
+++ b/posts/regression/2020-11-11-log-linear-regression.qmd
@@ -10,6 +10,20 @@ categories: [regression]
 
 당연히 알고 있다고 생각하지만 모르는 게 생각보다 많다. 회귀 분석에서 로그-리니어 모델, 즉 종속 변수에 로그를 취하고 독립 변수가 선형인 모델에서 계수를 어떻게 이해해야 할까? 
 
+## 왜 로그로 변환할까? 
+
+우선 이것부터 따져보자. 교과서나 자료를 찾아보면 $y_i$를 ln 변환하는 이유가 $y_i$의 분포를 정규분포에 가깝게 만들어주기 때문이라는 내용이 있다. 소 표본을 다루는 경우라면 오차 항의 정규 분포를 가정하기 때문에 타당한 이야기일 수도 있다. 대 표본이라면 굳이 이렇게 이해할 필요는 없다. 
+
+단순하게 말하자. 로그로 변환했을 때 회귀 분석이 보다 쉽기 때문이다. log는 곱셈을 덧셈으로 폴어주는 역할을 한다. $y_i = e^{\alpha \beta x_i}$의 경우 함수 형태가 $e^\alpha$와 $e^{\beta x_i}$의 곱으로 구성되어 있고, 이 녀석을 회귀 분석으로 추정하는 것은 적합하지 않다. 이때 $\log y_i$는 식을 선형으로 풀어주면 회귀 분석으로 다루기 좋은 녀석으로 바뀐다. 
+
+:::{layout="[-1,15,-1]"}
+![비선형의 함수 형태를 선형으로 바꿔보자.](./images/log-linear.png)
+:::
+
+곱으로 표현되는 식이란 어떤 경우일까? 몇 배가 되는 것이 자연스러운 맥락일 때 그러하다. 그리고 몇 배가 된다는 것은 일상어로 바꾸면 퍼센트 변화율을 뜻한다. 즉, 로그 변환은 수치의 절대적인 변화량보다는 퍼센트 변화율이 의미를 지닐 때 적합하다. 
+
+같은 맥락에서 수치들 사이의 분산이 클 때 로그 변환이 유효하다. 예를 들어 부의 분포는 극단적이다. 매우 적은 부를 소유한 사람부터 매우 많은 부를 소유한 사람까지 분포가 넓다. 이런 경우 로그 변환을 하면 분포가 좁아진다.
+
 ## 근삿값으로 본 계수의 의미 
 
 편의상 독립 변수와 종속 변수 모두 스칼라 값인 아래와 같은 로그-선형 모형을 살펴보자.
@@ -73,11 +87,3 @@ $$
 
 약 5% 정도 과소평가되었음을 알 수 있다. 이 크기의 의미나 중요성은 분석자가 선택할 문제다. 다만 $\beta$가 너무 크게 나왔다면, 실재 값과의 오차가 꽤 될 수 있음에 유의하자. 
 
-
-## 왜 로그로 변환할까? 
-
-교과서나 자료를 찾아보면 $y_i$를 ln 변환하는 이유가 $y_i$의 분포를 정규분포에 가깝게 만들어주기 때문이라는 내용이 있다. 소 표본을 다루는 경우라면 오차 항의 정규 분포를 가정하기 때문에 타당한 이야기일 수도 있다. 
-
-대 표본이라면 굳이 이렇게 이해할 필요는 없다. 단순하게 말해서 로그로 변환했을 때 더 잘 적합되기 때문이다. log는 곱셈을 덧셈으로 폴어주는 역할을 한다. 위에서 보듯이 $y_i = e^{\alpha \beta x_i}$의 경우 함수 형태가 $e^\alpha$와 $e^{\beta x_i}$의 곱으로 구성되어 있고, 이 녀석을 회귀 분석으로 추정하는 것은 적합하지 않다. 이때 $\log y_i$는 식을 선형으로 풀어주면 회귀 분석으로 다루기 좋은 녀석으로 바뀐다. 
-
-![비선형의 함수 형태를 선형으로 바꿔보자.](https://analystprep.com/study-notes/wp-content/uploads/2021/04/Img_11.jpg){ .fig7 }
