--- a/posts/regression/2020-11-11-log-linear-regression.qmd
+++ b/posts/regression/2020-11-11-log-linear-regression.qmd
@@ -12,9 +12,9 @@ categories: [regression]
 
 ## 왜 로그로 변환할까? 
 
-우선 이것부터 따져보자. 교과서나 자료를 찾아보면 $y_i$를 로그 변환하는 이유가 $y_i$의 분포를 정규분포에 가깝게 만들어주기 때문이라는 내용이 있다. 소표본을 다루는 경우라면 오차 항의 정규 분포를 가정하기 때문에 타당한 이야기일 수도 있다. 대표본이라면 굳이 중심극한정리에 의지하는 것으로 충분하다. 
+우선 이것부터 따져보자. 교과서나 자료를 찾아보면 $y_i$를 로그 변환하는 이유가 $y_i$의 분포를 정규분포에 가깝게 만들어주기 때문이라는 내용이 있다. 소표본을 다루는 경우라면 오차 항의 정규 분포를 가정하기 때문에 타당한 이야기일 수도 있다. 대표본이라면 중심 극한 정리(Central Limit Theorem)에 의지하는 것으로 충분하다. 
 
-로그로 변환했을 때 회귀 분석이 보다 타당해지는 경우가 있다. 로그는 곱셈을 덧셈으로 폴어주는 역할을 한다. $y_i = e^{\alpha \beta x_i}$의 경우 함수 형태가 $e^\alpha$와 $e^{\beta x_i}$의 곱으로 구성되어 있고, 이 녀석을 회귀 분석으로 추정하는 것은 적합하지 않다. 이때 $\log y_i$를 취하면 회귀 분석으로 다루기 좋은 녀석으로 바뀐다.
+우선 아래 그림에서 보듯이 로그로 변환했을 때 회귀 분석이 보다 타당해지는 경우가 있다. 로그는 곱셈을 덧셈으로 폴어주는 역할을 한다. $y_i = e^{\alpha \beta x_i}$의 경우 함수 형태가 $e^\alpha$와 $e^{\beta x_i}$의 곱으로 구성되어 있고, 이 녀석을 회귀 분석으로 추정하는 것은 적합하지 않다. 이때 $\log y_i$를 취하면 회귀 분석으로 다루기 좋은 녀석으로 바뀐다.
 
 :::{layout="[-1,15,-1]"}
 ![비선형의 함수 형태를 선형으로 바꿔 회귀분석을 활용할 수 있다.](./images/log-linear.png)
