--- a/posts/regression/2020-11-11-log-linear-regression.qmd
+++ b/posts/regression/2020-11-11-log-linear-regression.qmd
@@ -20,7 +20,7 @@ categories: [regression]
 ![비선형의 함수 형태를 선형으로 바꿔 회귀분석을 활용할 수 있다.](./images/log-linear.png)
 :::
 
-곱으로 표현되는 식이 어떤 경우가 나타날까? 어떤 대상의 몇 배가 되는 것이 자연스러운 맥락을 떠올려보자. 여기서 몇 배가 된다는 것은 다시 말하면 퍼센트 변화를 뜻한다. 즉, 로그 변환은 수치의 절대적인 변화량보다는 퍼센트 변화가 의미를 지닐 때 유용하게 사용할 수 있다. 
+곱으로 표현되는 식이 어떤 경우가 해당할까? 어떤 기준점의 몇 배로 늘고 주는 것이 자연스러운 맥락을 떠올려보자. 여기서 몇 배가 된다는 것은 다시 말하면 퍼센트 변화를 뜻한다. 즉, 로그 변환은 수치의 절대적인 변화량보다는 퍼센트 변화가 의미를 지닐 때 유용하게 사용할 수 있다. 
 
 비슷한 맥락이지만 데이터의 분산이 클 때도 로그 변환이 유효하다. 부(wealth)의 분포는 극단적인 경우가 많다. 매우 적은 부를 소유한 사람부터 매우 많은 부를 소유한 사람까지 분산이 매우 크다. 이런 경우 로그 변환을 하면 분산이 크게 줄어든다.
 
