--- a/posts/regression/2020-11-11-log-linear-regression.qmd
+++ b/posts/regression/2020-11-11-log-linear-regression.qmd
@@ -85,5 +85,5 @@ $$
 \%\Delta y = \exp(\beta) - 1 = 0.35
 $$
 
-약 5% 정도 과소평가되었음을 알 수 있다. 이 크기의 의미나 중요성은 분석자가 선택할 문제다. 다만 $\beta$가 너무 크게 나왔다면, 실재 값과의 오차가 꽤 될 수 있음에 유의하자. 
+약 5% 정도 과소평가되었음을 알 수 있다. 이 크기의 의미나 중요성은 분석자가 선택할 문제다. 다만 $\beta$가 너무 크게 나왔다면, 실재 값과의 오차가 생길 수 있다. 로그-선형 모델의 경우 원래 크기보다 퍼센트 변화를 과소 측정한다. 원래 지수적으로 늘어나는 것을 로그를 취해 선형으로 끌어내린 결과이다. 
 
