--- a/posts/regression/2020-11-11-log-linear-regression.qmd
+++ b/posts/regression/2020-11-11-log-linear-regression.qmd
@@ -5,6 +5,9 @@ author: "JS HUHH"
 date: "11/11/2020"
 image: "https://miro.medium.com/max/259/1*Psa5h9I8zm0lPSsqAgaZHw.png"
 categories: [regression]
+filters:
+   - lightbox
+lightbox: auto
 #margin-header: subscribe.html
 ---
 
