--- a/posts/regression/2019-11-10-understanding-logit-regression.qmd
+++ b/posts/regression/2019-11-10-understanding-logit-regression.qmd
@@ -54,7 +54,7 @@ lightbox: auto
 
 ### 어떤 경우 OLS는 곤란한가? 
 
-::: {layout="[[-10, 80, -10]]"}
+::: {layout="[-1, 3.5, -1]"}
 ![로지스틱 리그레션이 필요한 순간](https://miro.medium.com/max/1280/0*gKOV65tvGfY8SMem.png)
 :::
 
