--- a/posts/stats-simple/2022-05-27-SE.qmd
+++ b/posts/stats-simple/2022-05-27-SE.qmd
@@ -72,7 +72,7 @@ $$
 |표본 분산|sample variance|표본의 분산|$S(Y_i)^2 = \frac{1}{n-1}\sum_{i=1}^n (Y_i - \ES{Y}_n)^2$|
 |표준 오차|standard error|표본 통계량의 표준 편차|$SE(\ES{Y}_n) = \frac{\sigma_Y}{\sqrt{n}}$|
 |표준 오차의 추정치|estimated standard error|표준 오차 계산 시 $\sigma_Y \to S(Y_i)$|$\widehat{SE}(\ES{Y}_n) = \frac{S(Y_i)}{\sqrt{n}}$|
-|t-통계량|t-statistic|$t(\mu) = \frac{\ES{Y}_n - \mu}{\widehat{SE}(\ES{Y}_n)}$|$n$이 커질 때 정규분포에 근접한다.|
+|$t-$통계량|$t-$statistic|$t(\mu) = \frac{\ES{Y}_n - \mu}{\widehat{SE}(\ES{Y}_n)}$|$n$이 커질 때 정규분포에 근접한다.|
 
 ## Sample Mean 
 
@@ -138,25 +138,25 @@ $$
 
 ## Asymptotically Normal 
 
-t-통계량이 정규 분포에 근사하는 이유는 무엇일까? 
+$t-$통계량이 정규 분포에 근사하는 이유는 무엇일까? 
 
 $$
 t(\mu) = \frac{\overline{Y}-\mu}{\widehat{SE}(\overline{Y})}
 $$
 
-우선 t-통계량의 분자와 분모를 살펴보면, 각각 $n$이 커질 때 분자와 분모는 모두 0으로 수렴한다. 이 비율이 정규분포에 수렴하는 게 되는 이유는 중심극한 정리를 이용해 증명할 수 있다. 일단 결론만 기억하도록 하자. $t$는 표본 크기 $n$이 증가하면서 표준 정규 분포에 근사하게 된다. 이를 점근적 정규 분포(asymptotically normal)라고 칭한다. 
+우선 $t-$통계량의 분자와 분모를 살펴보면, 각각 $n$이 커질 때 분자와 분모는 모두 0으로 수렴한다. 이 비율이 정규분포에 수렴하는 게 되는 이유는 중심극한 정리를 이용해 증명할 수 있다. 일단 결론만 기억하도록 하자. $t$는 표본 크기 $n$이 증가하면서 표준 정규 분포에 근사하게 된다. 이를 점근적 정규 분포(asymptotically normal)라고 칭한다. 
 
-다시 말하면, $\ES{Y}_n$은 평균이 $\mu$이고 표준편차가 $\frac{\sigma}{\sqrt{n}}$인 정규 분포에 근사하게 된다. 따라서 표본 크기가 커짐에 따라서 t-통계량은 표준 정규 분포를 점점 닮아간다. 
+다시 말하면, $\ES{Y}_n$은 평균이 $\mu$이고 표준편차가 $\frac{\sigma}{\sqrt{n}}$인 정규 분포에 근사하게 된다. 따라서 표본 크기가 커짐에 따라서 $t-$통계량은 표준 정규 분포를 점점 닮아간다. 
 
 ![$n$이 커질수록 $\ES{X}_n$의 분포는 표준 정규 분포에 근접한다.](https://miro.medium.com/max/1400/0*V1zCLq5mboTCfq2_.jpeg){ .my-figure7}
 
-t-통계량은 대 표본(large sample)의 통계적 검정에 핵심을 이룬다. 원래 자료가 어느 분포에서 나왔는지와 관계없이 표본에 근거한 t-통계량은 정규 분포를 따르게 되고, 이를 통해 가설 검정을 실시할 수 있다. 
+$t-$통계량은 대 표본(large sample)의 통계적 검정에 핵심을 이룬다. 원래 자료가 어느 분포에서 나왔는지와 관계없이 표본에 근거한 $t-$통계량은 정규 분포를 따르게 되고, 이를 통해 가설 검정을 실시할 수 있다. 
 
 :::{ .column-margin }
-회귀 분석의 검정 또한 t-통계량에 근거한다. [여기](#regression-t-statistic)를 참고하도록 하자. 
+회귀 분석의 검정 또한 $t-$통계량에 근거한다. [여기](#regression-$t-$statistic)를 참고하도록 하자. 
 :::
 
-t-통계량의 크기는 검정을 위한 통계학적 증거일 뿐이다. 이 점을 잊지 말자. t-통계량의 형태에서 보듯이 분자가 충분히 크거나 혹은 분모가 충분히 작을 때 이 값이 커진다. 이는 신뢰 구간에 대해서도 마찬가지다. 신뢰 구간은 표준 오차에 반영되어 있는 통계적 정밀성에 의해 결정되지 우리가 발견하고자 하는 관계의 강도에 의해서 결정되지 않는다. 즉, t-통계량 및 신뢰 구간의 크기를 보고 해당 독립 변수가 종속 변수에 미치는 효과의 강도로 오해하면 곤란하다.
+$t-$통계량의 크기는 검정을 위한 통계학적 증거일 뿐이다. 이 점을 잊지 말자. $t-$통계량의 형태에서 보듯이 분자가 충분히 크거나 혹은 분모가 충분히 작을 때 이 값이 커진다. 이는 신뢰 구간에 대해서도 마찬가지다. 신뢰 구간은 표준 오차에 반영되어 있는 통계적 정밀성에 의해 결정되지 우리가 발견하고자 하는 관계의 강도에 의해서 결정되지 않는다. 즉, $t-$통계량 및 신뢰 구간의 크기를 보고 해당 독립 변수가 종속 변수에 미치는 효과의 강도로 오해하면 곤란하다.
 
 ## More
 
@@ -247,7 +247,7 @@ $$
 자세한 내용은 [여기](http://www.utstat.toronto.edu/~brunner/oldclass/413f08/handouts/STA413Ch4.pdf) 책의 해당 부분을 참고하라. 
 :::
 
-### 회귀 분석의 t-통계량{#regression-t-statistic}
+### 회귀 분석의 $t-$통계량{#regression-t-statistic}
 
 회귀 분석의 계수의 표본 추정량 $\hat \beta$는 다음과 같다. 
 $$
