--- a/posts/walk-through/2023-09-21-my-beelink.qmd
+++ b/posts/walk-through/2023-09-21-my-beelink.qmd
@@ -19,7 +19,7 @@ format:
 
 ::: columns
 ::: {.column width="40%"}
-## The Gadget 
+## The Gadget 👇
 
 [![](./images/beelink.webp)](https://www.aliexpress.com/item/1005005305248100.html)
 :::
