--- a/posts/regression/2022-05-28-normality.qmd
+++ b/posts/regression/2022-05-28-normality.qmd
@@ -73,8 +73,8 @@ $\sqrt{n}(\beta_i - \beta) \overset{d}{\longrightarrow} \rm N (0, \sigma_i)$ 직
 표본의 크기가 얼마나 크면 될까? [Schmidt and Finan](https://www.jclinepi.com/article/S0895-4356(17) 30485-7)의 연구에 따르면 회귀 모형의 경우 변수 당 대략 10개 이상의 관찰이 필요하다. 옆 그림에서 보듯이 모평균을 추정하는 문제에서 표본 평균의 크기가 30개 이상이면 CLT을 적용할 수 있다. 
 :::
 
-::: {layout="[[-20, 80, -20]]"}
-![표본의 크기가 커질수록 표본 통계량의 분포는 정규 분포에 근접한다.](http://player.slideplayer.com/76/12695720/slides/slide_3.jpg){.my-figure7}
+::: {layout="[[-1, 4, -1]]"}
+![표본의 크기가 커질수록 표본 통계량의 분포는 정규 분포에 근접한다.](http://player.slideplayer.com/76/12695720/slides/slide_3.jpg)
 :::
 
 위 그림에서 보듯이 가설 검정에서 모집단의 분포는 우리의 관심사가 아니다. 우리의 관심사는 **표본** 통계량이고, 이 표본 통계량이 얼마나 믿을만 할지를 가설 검정을 통해 파악한다. 후자를 가능하게 하는 것이 대 표본의 표본 통계량에 대해 성립하는 중심 극한 정리인 셈이다. 
