--- a/posts/computer-tool/2023-11-03-first-thing-ubuntu.qmd
+++ b/posts/computer-tool/2023-11-03-first-thing-ubuntu.qmd
@@ -4,7 +4,7 @@ description: 우분투 설치 후 이것부터!
 author: "JS HUHH"
 date: "11/03/2023"
 image: "./images/ubuntu.png"
-categories: [computer-tool]
+categories: [computer-tool, pc-install]
 lightbox: auto
 #fig-align: center
 filters:
