--- a/posts/computer-tool/2023-08-27-pixi.qmd
+++ b/posts/computer-tool/2023-08-27-pixi.qmd
@@ -28,7 +28,7 @@ format:
 ~~단점이 아예 없는 것은 아니다. 서비스가 anaconda 패키지 관리 시스템에 의존하기 때문에 필요한 패키지가 사용 환경에서 아나콘다 생태계에 없다면 어쩔 수 없이 타협해야 한다.~~ 0.8 버전부터 PyPI 패키지를 설치할 수 있다. 물론 PyPI 설치의 경우 초기 개발 단계라서 버그가 많다. 그래도 개인 프로젝트를 위한 의존성 관리 도구로는 충분하다.
 
 :::{.column-margin}
-개발팀은 Rust의 `cargo` 명령어를 지향한다고 하며, pixi가 언어에 종속되지는 않으나 의존성 지옥에 가장 취약한 python과 궁합이 잘 맞을 것이라고 밝히고 있다. conda-forge를 기본 패키지 저장소로 쓴다는 점부터 pixi가 python을 위한 의존성 관리 도구라는 것을 알 수 있다. 혹시나 해서 julia를 태워 봤다. conda-forge를 통해서 지원되는 julia는 intel macos와 linux다. 이 환경에서는 잘 돌아가고 WSL에서도 잘 설치된다. Windows와 Silicon mac에서는 설치가 안된다.
+개발팀은 Rust의 `cargo` 명령어를 지향한다고 하며, pixi가 언어에 종속되지는 않으나 의존성 지옥에 가장 취약한 python과 궁합이 잘 맞을 것이라고 밝히고 있다. conda-forge를 기본 패키지 저장소로 쓴다는 점부터 pixi가 python을 위한 의존성 관리 도구라는 것을 알 수 있다. 혹시나 해서 julia를 태워 봤다. conda-forge를 통해서 지원되는 julia는 intel macos와 linux다. 이 환경에서는 잘 돌아가고 WSL에서도 잘 설치된다. 콘다-포지의 줄리아 [리포지토리](https://anaconda.org/conda-forge/julia/files?page=1)에는 Windows와 Silicon mac용 설치 파일이 없다. 
 :::
 
 ## 설치 
