--- a/posts/math-of/2019-12-24-PageRank.qmd
+++ b/posts/math-of/2019-12-24-PageRank.qmd
@@ -135,7 +135,7 @@ $\boldsymbol{1}_n$은 모든 원소가 1인 $n \times n$ 행렬이다. $(*)$은 
 이 극한 분포 $p^*$가 바로 페이지랭크다! 마르코프 체인의 관점에서 페이지랭크란 페론-프로베니우스 정리에 따라서 아이겐밸류 $1$에 해당하는 좌 아이겐벡터를 찾는 과정이다. 물론 구글이 구사하는 실제의 알고리즘은 여기 적은 내용보다 훨씬 복잡하고 정교하다. 다만 그 핵심이 마르코프 체인이라는 사실을 기억해두자. 
 
 :::{.column-margin}
-[https://anarinsk.github.io/lie-pf1/](https://anarinsk.github.io/lie-pf1/)을 참고하라. 
+[🔗](./2019-12-11-Peron-Frobenus-1.html)을 참고하라. 
 :::
 
 극한 분포가 페이지랭크가 된다는 의미는 무엇일까? 마르코프 체인에서 극한 분포란 무작위로 상태를 옮겨가는 것이 무한이 반복되었을 때 도달하게 되는 분포다. 이는 충분히 긴 장기에 각 상태가 지니게 되는 '지분'(share)으로 이해할 수 있다. 
