--- a/posts/math-of/2019-12-24-PageRank.qmd
+++ b/posts/math-of/2019-12-24-PageRank.qmd
@@ -80,7 +80,9 @@ A^T =
 \end{bmatrix}
 $$
 
-$A^T$를 들어다보자. 일단, 행을 더하면 1이 된다. 즉, $i$에서 $i$를 포함해서 어디론가는 가야 한다는 뜻이다. 다음으로 $L_\cdot$의 정의를 살펴보면 $j \to i$의 이행확률은 $j$가 $i$로 향하는 링크를 지닐 경우는 $\frac{1}{m_i}$가 되고, 그렇지 않으면 0이다. 페이지와 브린이 정의한 random surfer라는 게 결국 이런 내용이다. $m_i$의 링크 중에서 특별히 선호하는 링크 없이 무작위로 하나를 골라서 나간다는 가정이 숨어 이는 셈이다.  아울러 해당 링크를 선택하는 데에는 현재의 가능성 이외에 그 전의 선택은 고려되지 않는다. 이점에서 이번 기의 선택에 바로 전기만 영향을 끼치는 마르코프 프로세스의 가정과 일치한다.  
+$A^T$를 들어다보자. 일단, 행을 더하면 1이 된다. 즉, $i$에서 $i$를 포함해서 어디론가는 가야 한다는 뜻이다. 다음으로 $L_\cdot$의 정의를 살펴보면 $j \to i$의 이행확률은 $j$가 $i$로 향하는 링크를 지닐 경우는 $\frac{1}{m_i}$가 되고, 그렇지 않으면 0이다. 페이지와 브린이 정의한 random surfer의 의미가 이것이다. $m_i$의 링크 중에서 특별히 선호하는 링크 없이 무작위로 하나를 골라서 나간다는 가정이다.  아울러 해당 링크를 선택하는 데에는 현재의 가능성 이외에 그 전의 선택은 고려되지 않는다. 이점에서 이번 기의 선택에 바로 전기만 영향을 끼치는 마르코프 프로세스의 가정과 일치한다. 
+
+한편 행 $i$는 $j \to i$로 들어오는 링크를 의미한다. $L_{\cdot j}$가 1이 많을수록 $i$로 오는 링크가 많다는 뜻이다. 즉, 이 링크는 영향력이 높은 링크를 뜻한다. 
 
 ### Why broken? 
 
