--- a/posts/stats-simple/2022-05-27-SE.qmd
+++ b/posts/stats-simple/2022-05-27-SE.qmd
@@ -6,6 +6,10 @@ date: "05/27/2022"
 image: "images/cat-sampling.webp"
 categories: [statistics, stats-simple]
 draft: false
+filters:
+   - lightbox
+   #- line-highlight
+lightbox: auto
 ---
 
 ::: {.hidden}
@@ -35,6 +39,8 @@ $$
 ## Finite Sample vs Asymptotic Properties
 
 "유한 표본"이란 어떤 크기든 표본의 크기가 정해져 있다는 의미이다. 가끔 "소 표본 small sample"이라는 표현도 활용된다. "점근적 특성 asymptotic properties"이란 표본 크기가 계속 커질 때 추정량이 지니는 특성을 의미한다. 통계학을 가르칠 때는 유한 표본의 추정량(estimator)에 관해 엄밀하게 내용을 배우지만, 실용적인 관점에서 중요한 것은 추량량의 점근적 특징이다. 
+
+점근적 특성에서 중요한 내용은 두 개다. 하나는 일치성, 즉 샘플의 크기가 커질수록 추정량이 모수에 접근한다는 것이다. 다른 하나는 중심 극한 정리다. 샘플의 크기가 커질수록 추정량의 분포가 정규 분포에 접근한다는 것이다.
 
 ## Unbiasedness, Efficiency, Consistency
 
@@ -162,7 +168,9 @@ $$
 
 다시 말하면, $\ES{Y}_n$은 평균이 $\mu$이고 표준편차가 $\frac{\sigma}{\sqrt{n}}$인 정규 분포에 근사하게 된다. 따라서 표본 크기가 커짐에 따라서 $t-$통계량은 표준 정규 분포를 점점 닮아간다. 
 
-![$n$이 커질수록 $\ES{X}_n$의 분포는 표준 정규 분포에 근접한다.](https://miro.medium.com/max/1400/0*V1zCLq5mboTCfq2_.jpeg){ .my-figure7}
+::: {layout="[[-10, 60, -10]]" layout-valign="bottom"}
+![$n$이 커질수록 $\ES{X}_n$의 분포는 표준 정규 분포에 근접한다.](https://miro.medium.com/max/1400/0*V1zCLq5mboTCfq2_.jpeg)
+:::
 
 $t-$통계량은 대 표본(large sample)의 통계적 검정에 핵심을 이룬다. 원래 자료가 어느 분포에서 나왔는지와 관계없이 표본에 근거한 $t-$통계량은 정규 분포를 따르게 되고, 이를 통해 가설 검정을 실시할 수 있다. 
 
@@ -289,6 +297,10 @@ $$
 
 ### CLT and LLN illustrated 
 
-![CLT; 0, 1을 각각 0.8, 0.2의 확률로 갖는 베르누이 분포가 있을 때, 확률 변수의 샘플 크기가 커짐에 따라 표본 평균은 정규 분포를 닮아간다.](https://i0.wp.com/lorentzen.ch/wp-content/uploads/2021/01/image-2.png){ .my-figure7 }
+::: {layout="[[-20, 60, -20]]" layout-valign="bottom"}
+![CLT; 0, 1을 각각 0.8, 0.2의 확률로 갖는 베르누이 분포가 있을 때, 확률 변수의 샘플 크기가 커짐에 따라 표본 평균은 정규 분포를 닮아간다.](https://i0.wp.com/lorentzen.ch/wp-content/uploads/2021/01/image-2.png)
+:::
 
-![LLN; $n$이 커짐에 따라서 평균값으로 모이는 현상이 발생한다. 위 그래프와 달리 $x$ 축의 범위를 0, 1 사이로 고정했다.](https://i0.wp.com/lorentzen.ch/wp-content/uploads/2021/01/image-3.png){ .my-figure7 }
+::: {layout="[[-20, 60, -20]]" layout-valign="bottom"}
+![LLN; $n$이 커짐에 따라서 평균값으로 모이는 현상이 발생한다. 위 그래프와 달리 $x$ 축의 범위를 0, 1 사이로 고정했다.](https://i0.wp.com/lorentzen.ch/wp-content/uploads/2021/01/image-3.png)
+:::
