--- a/posts/stats-simple/2022-05-27-SE.qmd
+++ b/posts/stats-simple/2022-05-27-SE.qmd
@@ -34,11 +34,11 @@ $$
 
 - 알려진 파라미터는 없다.
 - 알려진 분포도 없다. 
-- 표본 추출은 평균이 $\mu$이고 분산이 $\sigma^2 < \infty$인 분포에서 IID(independent and identically distributed)로 생성된다. 
+- 표본은 평균이 $\mu$이고 분산이 $\sigma^2 < \infty$인 분포에서 IID(independent and identically distributed)로 추출된다. 
 
 ## Finite Sample vs Asymptotic Properties
 
-"유한 표본"이란 어떤 크기든 표본의 크기가 정해져 있다는 의미이다. 가끔 "소 표본 small sample"이라는 표현도 활용된다. "점근적 특성 asymptotic properties"이란 표본 크기가 계속 커질 때 추정량이 지니는 특성을 의미한다. 통계학을 가르칠 때는 유한 표본의 추정량(estimator)에 관해 엄밀하게 내용을 배우지만, 실용적인 관점에서 중요한 것은 추량량의 점근적 특징이다. 
+"유한 표본 finite sample"이란 어떤 크기든 표본의 크기가 정해져 있다는 의미이다. 가끔 "소 표본 small sample"이라는 표현도 활용된다. "점근적 특성 asymptotic properties"이란 표본 크기가 계속 커질 때 추정량이 지니는 특성을 의미한다. 통계학을 가르칠 때는 유한 표본의 추정량(estimator)에 관해 엄밀하게 내용을 배우지만, 실용적인 관점에서 중요한 것은 추량량의 점근적 특징이다. 
 
 점근적 특성에서 중요한 내용은 두 개다. 하나는 일치성, 즉 샘플의 크기가 커질수록 추정량이 모수에 접근한다는 것이다. 다른 하나는 중심 극한 정리다. 샘플의 크기가 커질수록 추정량의 분포가 정규 분포에 접근한다는 것이다.
 
@@ -72,7 +72,9 @@ $$
 \underset{n \to \infty}{\rm plim}~\hat\theta_n = \theta  
 $$
 
-![파라미터 값 4를 추정하기 위한 샘플 추정량; 샘플 크기가 증가하면서 4로 접근한다. 예시의 샘플 추정량은 biased된 추정량이다.](https://upload.wikimedia.org/wikipedia/commons/b/b2/Consistency_of_estimator.svg){ .my-figure7 }
+::: {layout="[[-10, 60, -10]]" layout-valign="bottom"}
+![파라미터 값 4를 추정하기 위한 샘플 추정량; 샘플 크기가 증가하면서 4로 접근한다. 예시의 샘플 추정량은 biased된 추정량이다.](https://upload.wikimedia.org/wikipedia/commons/b/b2/Consistency_of_estimator.svg)
+:::
 
 :::{ .column-margin }
 plim의 정의는 다음과 같다. 표본 크기 $n$과 임의의 양의 상수 $c$에 대하여 표본 추정량 $\hat\theta_n$은 $\theta$의 일치 추정량(consistent estimator)이라고 한다.
