--- a/posts/stats-simple/2022-05-27-SE.qmd
+++ b/posts/stats-simple/2022-05-27-SE.qmd
@@ -23,12 +23,12 @@ $$
 
 ## TL; DR 
 
-- 기본 통계학 용어와 개념 몇 가를 정리해 보자. 
-- 자주 잊어먹는 나를 위한 개인적인 용도
+- 기본 통계학 용어와 개념 몇 개를 두서없이 내 맘대로 정리한다. 
+- 자주 잊는 나를 위한 개인적인 용도
 
 ## Why
 
-통계학을 들은 사람들이라면 표준 오차는 대체로 잘 아는 내용이다. 그런데 가끔 까먹는다. 개인적인 용도를 위해서 관련된 앞뒤 내용 몇 가지 정리해둔다. 
+통계학을 배운 사람들이라면 표준 오차는 대체로 잘 아는 내용이다. 그런데 나는 가끔 까먹는다. 개인적인 용도를 위해서 관련된 앞뒤 내용 몇 가지를 순서 없이 정리해둔다. 
 
 ## Big Ifs 
 
@@ -40,7 +40,7 @@ $$
 
 "유한 표본 finite sample"이란 어떤 크기든 표본의 크기가 정해져 있다는 의미이다. 가끔 "소 표본 small sample"이라는 표현도 활용된다. "점근적 특성 asymptotic properties"이란 표본 크기가 계속 커질 때 추정량이 지니는 특성을 의미한다. 통계학을 가르칠 때는 유한 표본의 추정량(estimator)에 관해 엄밀하게 내용을 배우지만, 실용적인 관점에서 중요한 것은 추량량의 점근적 특징이다. 
 
-점근적 특성에서 중요한 내용은 두 개다. 하나는 일치성, 즉 샘플의 크기가 커질수록 추정량이 모수에 접근한다는 것이다. 다른 하나는 중심 극한 정리다. 샘플의 크기가 커질수록 추정량의 분포가 정규 분포에 접근한다는 것이다.
+점근성에서 가장 중요한 내용은 두 개다. 일치성은 샘플의 크기가 커질수록 추정량이 모수에 접근하는 특징이다. 다른 하나는 중심 극한 정리이다. 샘플의 크기가 커질수록 추정량의 분포가 정규 분포에 접근하게 된다. 일치성이 확보되면 추정량이 불편성을 지니고 있지 않아도 표본의 크기가 커질수록 참 값이 충분히 가깝게 접근한다. 한편 중심 극한 정리는 추정량의 통계적인 검정을 위한 필수적인 방법을 제공한다. 
 
 ## Unbiasedness, Efficiency, Consistency
 
@@ -55,9 +55,10 @@ $$
 \E(\hat \theta) = \theta
 $$
 
-불편성은 추정량의 중요한 특징이지만, 불편성 하나로는 충분하지 않다. 극단적인 예로 $X$에서 추출된 샘플 하나를 $x_1$라고 하자. 이 샘플 하나를 추정량으로 쓰면 이 역시 불편성을 지니고 있다. 하지만 이 추정량은 좋은 추정량이 아니다. 
+불편성은 추정량의 중요한 특징이지만, 불편성만으로 충분하지 않다. 극단적인 예로 $X$에서 추출된 샘플 하나를 $x_1$라고 하자. 이 샘플 하나를 추정량으로 쓰면 이 역시 불편성을 지니고 있다 ($\E(x_1) = \theta$). 하지만 이 추정량은 좋은 추정량이 아니다. 
 
 **Efficiency**
+
 $\theta$에 대해서 $\hat \theta_1$과 $\hat \theta_2$ 두 개의 추정량이 있다고 하자. 
 $$
 \rm{Var} (\hat\theta_1) \leq \rm{Var} (\hat\theta_2)
@@ -135,7 +136,7 @@ $$
 S^2_n = \dfrac{1}{n-1} \sum_{i=1}^{n} (Y_i - \ES{Y}_n)^2
 $$
 
-$S^2_n$은 [불편 추정량](#s2-n-1)이고 [일치 추정량](#s2-consistent)이다. $n$이 충분히 크다면 불편 추정량 여부는 중요하지 않다. $\dfrac{1}{10000}$과 $\dfrac{1}{9999}$의 차이가 큰 의미가 있을까? $(n-1)$ 대신 $n$이 들어간 표본 추정량과 일치성을 유지한다. 
+$S^2_n$은 [불편 추정량](#s2-n-1)이고 [일치 추정량](#s2-consistent)이다. $n$이 충분히 크다면 불편 추정량 여부는 중요하지 않다. $\dfrac{1}{10000}$과 $\dfrac{1}{9999}$의 차이가 큰 의미가 있을까? $(n-1)$ 대신 $n$이 들어간 표본 추정량 역시 일치성을 지니고 있다. 
 
 ## Standard Error 
 
@@ -166,19 +167,21 @@ $$
 t(\mu) = \frac{\overline{Y}-\mu}{\widehat{SE}(\overline{Y})}
 $$
 
-우선 $t-$통계량의 분자와 분모를 살펴보면, 각각 $n$이 커질 때 분자와 분모는 모두 0으로 수렴한다. 이 비율이 정규분포에 수렴하는 게 되는 이유는 중심극한 정리를 이용해 증명할 수 있다. 일단 결론만 기억하도록 하자. $t$는 표본 크기 $n$이 증가하면서 표준 정규 분포에 근사하게 된다. 이를 점근적 정규 분포(asymptotically normal)라고 칭한다. 
+우선 $t-$통계량의 분자와 분모를 살펴보면, 각각 $n$이 커질 때 분자와 분모는 모두 0으로 수렴한다. 이 비율이 정규분포에 수렴하는 게 되는 이유는 중심극한 정리를 이용해 증명할 수 있다. 일단 결론만 기억하도록 하자. $t$-통계량은 표본 크기 $n$이 증가하면서 표준 정규 분포에 근사하게 된다. 즉 점근적으로 (표준) 정규분포(asymptotically normal)가 된다. 
 
-다시 말하면, $\ES{Y}_n$은 평균이 $\mu$이고 표준편차가 $\frac{\sigma}{\sqrt{n}}$인 정규 분포에 근사하게 된다. 따라서 표본 크기가 커짐에 따라서 $t-$통계량은 표준 정규 분포를 점점 닮아간다. 
+다시 말하면 $\ES{Y}_n$은 평균이 $\mu$이고 표준편차가 $\frac{\sigma}{\sqrt{n}}$인 정규 분포에 근사하게 된다. 따라서 표본 크기가 커짐에 따라서 $t-$통계량은 표준 정규 분포를 점점 닮아간다. 
 
 ::: {layout="[[-10, 60, -10]]" layout-valign="bottom"}
 ![$n$이 커질수록 $\ES{X}_n$의 분포는 표준 정규 분포에 근접한다.](https://miro.medium.com/max/1400/0*V1zCLq5mboTCfq2_.jpeg)
 :::
 
-$t-$통계량은 대 표본(large sample)의 통계적 검정에 핵심을 이룬다. 원래 자료가 어느 분포에서 나왔는지와 관계없이 표본에 근거한 $t-$통계량은 정규 분포를 따르게 되고, 이를 통해 가설 검정을 실시할 수 있다. 
+$t-$통계량은 대 표본(large sample)의 통계적 검정에 기둥이다. 원래 자료가 어느 분포에서 나왔는지와 관계없이 표본 통계량을 활용하는 $t-$통계량은 정규 분포를 따르게 되고 이를 통해 가설 검정을 실시할 수 있다. 
 
 :::{ .column-margin }
 회귀 분석의 검정 또한 $t-$통계량에 근거한다. [여기](#regression-$t-$statistic)를 참고하도록 하자. 
 :::
+
+## $t$-값은 해당 통계량의 '통계적인' 증거일 뿐이다 
 
 $t-$통계량의 크기는 검정을 위한 통계학적 증거일 뿐이다. 이 점을 잊지 말자. $t-$통계량의 형태에서 보듯이 분자가 충분히 크거나 혹은 분모가 충분히 작을 때 이 값이 커진다. 이는 신뢰 구간에 대해서도 마찬가지다. 신뢰 구간은 표준 오차에 반영되어 있는 통계적 정밀성에 의해 결정되지 우리가 발견하고자 하는 관계의 강도에 의해서 결정되지 않는다. 즉, $t-$통계량 및 신뢰 구간의 크기를 보고 해당 독립 변수가 종속 변수에 미치는 효과의 강도로 오해하면 곤란하다.
 
@@ -301,10 +304,10 @@ $$
 
 ### CLT and LLN illustrated 
 
-::: {layout="[[-20, 60, -20]]" layout-valign="bottom"}
+::: {layout="[[-10, 60, -10]]" layout-valign="bottom"}
 ![CLT; 0, 1을 각각 0.8, 0.2의 확률로 갖는 베르누이 분포가 있을 때, 확률 변수의 샘플 크기가 커짐에 따라 표본 평균은 정규 분포를 닮아간다.](https://i0.wp.com/lorentzen.ch/wp-content/uploads/2021/01/image-2.png)
 :::
 
-::: {layout="[[-20, 60, -20]]" layout-valign="bottom"}
+::: {layout="[[-10, 60, -10]]" layout-valign="bottom"}
 ![LLN; $n$이 커짐에 따라서 평균값으로 모이는 현상이 발생한다. 위 그래프와 달리 $x$ 축의 범위를 0, 1 사이로 고정했다.](https://i0.wp.com/lorentzen.ch/wp-content/uploads/2021/01/image-3.png)
 :::
