--- a/posts/the-books/2024-01-30-백광.qmd
+++ b/posts/the-books/2024-01-30-백광.qmd
@@ -46,7 +46,7 @@ lightbox: auto
 
 치매를 앓는 듯한 시아비지의 독백이 소설을 열고 닫는다. 세대와 인물을 건너며 반복되는 살인, 배신 그리고 주체하기 힘든 회한이 소설을 지배한다. 각 인물의 서술 방식이 조금씩 다르고, 각 대화의 마지막에 등장하는 '하지만 OO은 범인이 아니다'의 서술이 반전을 던지고 끝나는 드라마처럼 느껴지기도 한다. 
 
-"백광"애는 전형적인 추리 소설이 지닌 클리셰, 즉 뛰어난 지략의 탐정 혹은 범죄자 그리고 사건을 끈질기게 추적하는 존재로서의 경찰 등이 없다. 사건을 두고 모두가 범인이면서 동시에 모두가 범인이 아니다. 모두가 진실의 일부를 알고 있지만, 인물은 그 조각의 진실만 알고 이를 자기 식대로 해석할 뿐이다. 진실의 전체 모습 오직 해당 독백과 대화를 다 읽은 독자만 알 수 있다. 어쩌면 이 대목이 이 소설이 만들어낸 가장 근사한 트릭이 아닐까 싶다. 
+"백광"에는 전형적인 추리 소설이 지닌 클리셰, 즉 뛰어난 지략의 탐정 혹은 초월적인 범죄자 그리고 사건을 끈질기게 추적하는 경찰 등이 없다. 사건을 두고 모두가 범인이면서 동시에 모두가 범인이 아니다. 모두가 진실의 일부를 알고 있지만, 인물은 그 조각의 진실만 알고 이를 자기 식대로 해석할 뿐이다. 진실의 전체 모습 오직 해당 독백과 대화를 다 읽은 독자만 알 수 있다. 어쩌면 이 대목이 이 소설이 만들어낸 가장 근사한 트릭이 아닐까 싶다. 
 
 
 
