--- a/posts/the-books/2024-01-30-백광.qmd
+++ b/posts/the-books/2024-01-30-백광.qmd
@@ -36,17 +36,17 @@ lightbox: auto
 
 ## 완벽한 구조 
 
-렌조 미키히코의 "백광"은 완벽한 추리 소설이다. 이 작품은 추리 소설이 갖추어야 하는 기본기를 두루 잘 갖추고 있다. 인물 간의 뒤틀린 관계 설정, 갈등의 핵심을 이루는 서사의 반복과 변주 그리고 거듭되는 반전에도 억지스러움은 없고 설득력이 충만하다.
+렌조 미키히코의 "백광"은 완벽한 추리 소설이다. 이 작품에는 추리 소설이 갖추어야 하는 기본기가 두루 잘 들어 있다. 인물 간의 뒤틀린 관계 설정, 갈등의 핵심을 이루는 서사의 반복과 변주 그리고 거듭되는 반전에도 자연스런 설득력이 충만하다.
 
-"백광"은 1명 빼고 가족으로 묶이는 7명의 고백으로 구성되어 있다. 나오코라는 네 살짜리 여자 아이가 이모의 집에서 살해 당하고 집 앞마당에 매장되는 사건이 발생한다. 책은 누가 살인을 저지른 것인지 찾아가는 과정을 담고 있다. 7명의 관점에서 같은 사건이 각자의 시선과 경험으로 서술되고, 이때 각자가 지닌 부분 증거에 기반한 제 각각의 추측과 추리가 등장한다. 이런 소설의 구조 때문에 추리 소설의 핵심 사실, 즉 누가 범인인가는 화자마다 바뀌게 된다. 
+"백광"은 1명 빼고 가족으로 엮인 7명의 고백으로 구성되어 있다. 나오코라는 네 살짜리 여자 아이가 이모의 집에서 살해 당하고 집 앞마당에 매장되는 사건이 발생한다. 진범을 찾아가는 소설은 7명의 관점에서 같은 사건이 각자의 시선과 경험을 통해 서술된다. 이때 각자의 부분 증거에 기반을 둔 각각의 추측과 추리가 등장한다. 소설의 이런 구조 때문에 추리 소설의 핵심 사실, 즉 누가 범인인가의 대상과 초점이 계속 바뀌게 된다. 
 
-전지적 혹은 관찰자 시점을 지닌 탐정 혹은 경찰이 등장하지 않기 때문에 각각의 '추리'는 불완전할 수 밖에 없다. 각 화자의 독백 형식을 취한 것은 좋은 접근이다. 독백 서술이기 때문에 읽노라면 이것은 진실일까 아니면 거짓일까 하는 의문이 독자를 계속 파고 든다. 그러나 이런 의문은 작가가 의도한 것이다. 영화 "라쇼몽"을 보는 듯한 기분이 드는 것은 소설의 독특한 서술 구조 떄문이다. 
+전지적 혹은 관찰자 시점을 지닌 탐정 혹은 경찰이 등장하지 않기 때문에 각각의 '추리'는 불완전할 수 밖에 없다. 독백을 읽노라면 이것은 진실일까 아니면 거짓일까 하는 의문이 독자를 계속 파고 든다. 이런 의문은 작가가 의도한 것이다. 영화 "라쇼몽"을 보는 듯한 기분이 드는 것은 소설의 이러한 독특한 서술 구조 때문이다. 
 
 ## 독자만 알 수 있다! 
 
-치매를 앓는 듯한 시아비지의 독백이 소설을 열고 닫는다. 세대와 인물을 건너며 반복되는 살인, 배신 그리고 주체하기 힘든 회한이 소설을 지배한다. 각 인물의 서술 방식이 조금씩 다르고, 각 대화의 마지막에 등장하는 '하지만 OO은 범인이 아니다'의 서술이 반전을 던지고 끝나는 드라마처럼 느껴지기도 한다. 
+치매를 앓는 듯한 시아비지의 독백이 소설을 열고 닫는다. 세대와 인물을 넘나들며 반복된 살인, 배신 그리고 회한이 소설에 촘촘하게 들어서 있다. 각 인물의 서술 방식이나 분위기가 다르고, 마지막에 등장하는 '하지만 OO은 범인이 아니다'의 서술이 반전을 투척하는 TV 연속극 같기도 한다. 
 
-"백광"에는 전형적인 추리 소설이 지닌 클리셰, 즉 뛰어난 지략의 탐정 혹은 초월적인 범죄자 그리고 사건을 끈질기게 추적하는 경찰 등이 없다. 사건을 두고 모두가 범인이면서 동시에 모두가 범인이 아니다. 모두가 진실의 일부를 알고 있지만, 인물은 그 조각의 진실만 알고 이를 자기 식대로 해석할 뿐이다. 진실의 전체 모습 오직 해당 독백과 대화를 다 읽은 독자만 알 수 있다. 어쩌면 이 대목이 이 소설이 만들어낸 가장 근사한 트릭이 아닐까 싶다. 
+"백광"에는 전형적인 추리 소설의 클리셰, 즉 뛰어난 지략의 탐정 혹은 초월적인 범죄자 그리고 사건을 끈질기게 추적하는 경찰 등이 없다. 이 사건 앞에서 모두가 범인이면서 동시에 모두가 범인이 아니다. 각자 진실의 일부를 알고 있지만 그 조각의 진실로는 전체를 파악할 수 없다. 진실의 전체 모습 해당 독백과 대화를 전부 읽은 독자만 알 수 있다. 어쩌면 이 대목이 "백광"의 가장 근사한 트릭이 아닐까? 
 
 
 
