--- a/posts/the-books/2024-01-30-백광.qmd
+++ b/posts/the-books/2024-01-30-백광.qmd
@@ -44,7 +44,7 @@ lightbox: auto
 
 ## 독자만 알 수 있다! 
 
-치매를 앓는 듯한 시아비지의 독백이 소설을 열고 닫는다. 세대와 인물을 넘나들며 반복된 살인, 배신 그리고 회한이 소설에 촘촘하게 들어서 있다. 각 인물의 서술 방식이나 분위기가 다르고, 챕터의 마지막에 등장하는 '하지만 OO은 범인이 아니다'의 서술이 매번 반전을 투척하는 TV 연속극 같기도 한다. 
+치매를 앓는 듯한 시아비지의 독백이 소설을 열고 닫는다. 세대와 인물을 넘나들며 반복된 살인, 배신 그리고 회한이 소설에 촘촘하게 들어서 있다. 각 인물의 서술 방식이나 분위기가 다르고, 챕터의 마지막에 등장하는 '하지만 OO은 범인이 아니다'의 서술이 매번 반전을 투척하는 TV 연속극인가 싶을 때도 있더라. 
 
 "백광"에는 전형적인 추리 소설의 클리셰, 즉 뛰어난 지략의 탐정, 초월적인 범죄자 혹은 사건을 끈질기게 추적하는 경찰 등이 없다. 소설의 사건 앞에서 모두가 범인이면서 동시에 모두가 범인이 아닐 수도 있다. 각자 진실의 일부를 알고 있지만 진실의 조각으로는 전체를 파악할 수 없다. 7인의 독백과 대화를 모두 읽은 독자만 전체 그림을 볼 수 있는 셈이다. 어쩌면 이 대목이 소설 "백광"의 가장 근사한 트릭이 아닐까? 
 
