--- a/posts/the-books/2024-01-30-백광.qmd
+++ b/posts/the-books/2024-01-30-백광.qmd
@@ -36,15 +36,15 @@ lightbox: auto
 
 ## 완벽한 구조 
 
-렌조 미키히코의 "백광"은 완벽한 추리 소설이다. 이 작품에는 추리 소설이 갖추어야 하는 기본기가 두루 잘 들어 있다. 소설은 인물 간의 뒤틀린 관계 설정, 갈등의 핵심을 이루는 서사의 반복과 변주 그리고 거듭되는 반전에도 자연스런 설득력을 지니고 있다.
+렌조 미키히코의 "백광"은 완벽한 추리 소설이다. 이 작품에는 추리 소설이 갖추어야 하는 기본기가 두루 잘 들어 있다. 소설은 인물 간의 뒤틀린 관계 설정, 갈등의 핵심을 이루는 서사의 반복과 변주 그리고 거듭되는 반전에도 무너지지 않는 극의 설득력을 지닌다.
 
-"백광"은 1명 빼고 가족으로 엮인 7명의 고백으로 구성되어 있다. 나오코라는 네 살짜리 여자 아이가 이모의 집에서 살해 당하고 집 앞마당에 매장되는 사건이 발생한다. 진범을 찾아가는 소설은 7명의 관점에서 같은 사건이 각자의 시선과 경험을 통해 서술된다. 이때 각자가 지닌 부분 증거에 기반을 둔 각각의 추측과 추리가 등장한다. 소설의 이런 구조 때문에 추리 소설의 핵심 사실, 즉 누가 범인인가의 질문이 바뀌어 계속 등장한다. 추리 소설의 맛이란 이 질문을 어떻게 바꿔가며 지속적으로 던질 수 있는지에 있다. 
+"백광"은 1명 빼고 가족으로 엮인 7명의 고백으로 구성된다. 나오코라는 네 살짜리 여자 아이가 이모의 집에서 살해 당하고 집 앞마당에 매장되는 사건이 발생한다. 진범을 찾아가는 소설은 7명의 관점에서 같은 사건이 각자의 시선과 경험을 통해 서술되고 해석된다. 7명 각각이 지닌 파편 증거에 기반을 둔 추측과 추리가 번갈아 등장한다. 소설의 이런 구조 때문에 추리 소설의 뼈대인 '누가 범인인가'의 질문이 계속 수면 위로 떠오른다. 추리 소설의 맛이란 이 질문을 어떻게 바꿔가며 지루하지 않게 던질 수 있는지에 달려 있지 않은가. 
 
-전지적 혹은 관찰자 시점을 지닌 탐정 혹은 경찰이 등장하지 않기 때문에 각각의 '추리'는 불완전할 수 밖에 없다. 각자의 독백을 읽노라면 이것은 진실일까 아니면 거짓일까 하는 의문이 독자를 계속 파고 든다. 이런 의문은 작가가 의도한 것이다. 영화 "라쇼몽"을 보는 듯한 기분이 종종 드는 것은 소설의 이러한 독특한 서술 구조 때문이다. 
+전지적 혹은 관찰자 시점을 지닌 탐정이나 경찰이 거의 등장하지 않기 때문에 각각의 '추리'는 거의 소설 끝까지 불완전한 채 남는다. 각자의 독백을 읽게 되면 이것은 진실일까 아니면 거짓일까 하는 의문이 계속 맴돈다. 작나는 이런 뒷맛을 의도했다. 책을 읽으면서 영화 "라쇼몽"을 보는 듯한 기분이 종종 드는 것은 소설의 이러한 독특한 서술 구조 덕분이다. 
 
 ## 독자만 알 수 있다! 
 
-치매를 앓는 듯한 시아비지의 독백이 소설을 열고 닫는다. 세대와 인물을 넘나들며 반복된 살인, 배신 그리고 회한이 소설에 촘촘하게 들어서 있다. 각 인물의 서술 방식이나 분위기가 다르고, 챕터의 마지막에 등장하는 '하지만 OO은 범인이 아니다'의 서술이 매번 반전을 투척하는 TV 연속극인가 싶을 때도 있더라. 
+치매를 앓는 듯한(?) 시아비지의 독백이 소설을 열고 닫는다. 세대와 인물을 넘나들며 반복된 살인, 배신 그리고 각자의 후회와 증오가 소설을 빽빽하게 채우고 있다. 각 인물의 말투와 분위기가 차별적이고 , 챕터의 마지막에 의표를 찌르듯 등장하는 '하지만 OO은 범인이 아니다'의 문구가 반전을 난사하는 TV 연속극인가 싶을 때도 있다. 
 
 "백광"에는 전형적인 추리 소설의 클리셰, 즉 뛰어난 지략의 탐정, 초월적인 범죄자 혹은 사건을 끈질기게 추적하는 경찰 등이 없다. 소설의 사건 앞에서 모두가 범인이면서 동시에 모두가 범인이 아닐 수도 있다. 각자 진실의 일부를 알고 있지만 진실의 조각으로는 전체를 파악할 수 없다. 7인의 독백과 대화를 모두 읽은 독자만 전체 그림을 볼 수 있는 셈이다. 어쩌면 이 대목이 소설 "백광"의 가장 근사한 트릭이 아닐까? 
 
