--- a/posts/the-books/2024-02-05-조선사-쩐의전쟁.qmd
+++ b/posts/the-books/2024-02-05-조선사-쩐의전쟁.qmd
@@ -47,6 +47,8 @@ lightbox: auto
 ## 관료들의 고단함 그리고 전문직 
 오늘날의 관점으로 보면 민사 소송과 형사 소송으로 얽혀 있는 셈인데, 책에도 나오지만, 당시 관료들은 무척 피곤했을 것이다. 제출된 소장을 다 검토해야 하고, 그 중 오늘날의 관점에서 기소해야할 것과 그렇지 않은 것을 분류하고 양쪽의 변론을 청취한 뒤 합당한 판결까지 내려야 했다. 관청이 수행했던 치안기능까지 고려해보면 DC 코믹스에 등장하는 "저지 드레드"에 가까운 존재가 아니었을까 싶다. 막강한 관력을 쥐고 있으니 '탐관오리'로 변질되기도 쉬웠겠지만, 어느 정도 기능을 하려면 아마 자신의 몸과 마음을 갈아 넣어야 했을 것이다. 
 
+이쯤되면 조선 시대에 '변호사'가 없었을까 싶은 생각이 떠오르는데 아니나 다를까 있었다. 소장을 대신 써주고 백성들에게 생소한 법률 자문을 해주는 "외지부"가 그것이다. 요즘 같이 많은 사람들이 우러러 보는 직업은 아니어서, 행정 절차를 방해하는 것으로 여겨져서 벌을 받기도 했다고 한다. 하지만 그 기능만은 요즘 변호사 못지 않았던 것 같다. 배심원 제도가 생기면서 이들에게 호소하는 소송 변호사가 따로 생겨났듯이, 저 시대의 가장 중요한 것이 자신의 딱한 사정을 호소하는 필력 그리고 격쟁을 할 때는 비통한 울음소리 같은 연출이 중요했다고 한다. 
+
 ## 큰 그림이 함께 있었다면 
 
 저자가 책에 적었듯이 조선에서 벌어진 '쟁송' 혹은 '분쟁'의 역사가 이토록 풍부하게 남아 있다면 좀 더 큰 그림을 한번 보고 싶더라. 물론 이 책의 주제는 아니다. 재미있는 사례를 발굴하기 위해서 예외적인 경우가 소개된 것은 아닐까, 하는 생각이 들었다. 조선 시대의 법적 풍경에 관한 조금 더 큰 그림을 숫자로 알려주는 짧은 대목이 하나 들어가 있다면 더욱 좋았을 듯 싶다. 
