--- a/posts/the-books/2024-02-05-조선사-쩐의전쟁.qmd
+++ b/posts/the-books/2024-02-05-조선사-쩐의전쟁.qmd
@@ -35,23 +35,26 @@ lightbox: auto
 :::
 
 ## 조선은 소송의 나라? 
-조선에는 송사가 난무했다! 이 책이 주는 가장 큰 가르침이다. 봉건 신분제 사회에서 무슨 소송? 양반이면 아무런 거리낌 없이 노비나 상놈을 때려 죽일 수 있었던 시대 아닌가? 아니다. 사극을 봐서 익히 알 수 있듯이 조선은 왕권조차 전능하지 못한 절차의 국가였다. 물론 근대적인 삼권 분립과는 거리가 멀지만, 사법과 행정을 통합한 고을 사또, 절도사 혹은 상급 기관의 장에 의해서 송사가 제기되고 심의될 수 있는 기능을 갖추고 있었따. 
 
-이런 쟁송의 권리는 신분에 구애받지 않았다. 책이 등장하듯 노비는 재산의 일부로 분쟁의 대상이기도 했지만 그가 억울한 일을 당했을 경우 리를 제소해서 바로 잡는 것이 아예 불가능한 사회는 아니었다. 신분제 사회에서 구조적이고 체계적인 불이익이 없었을리 없겠지만 최후의 수단(last resort)로 노비까지 기댈 수 있는 수단이 있었다는 대목이 놀랍다. 과연 우리는 조선에 관해서 제대로 알고 있는가? 
+조선에는 송사가 난무했다! 이 책이 주는 가장 큰 가르침이다. 봉건 신분제 사회에서 무슨 소송? 양반이면 아무런 거리낌 없이 노비나 상놈을 때려 죽일 수 있었던 시대 아닌가? 아니다. 사극을 봐서 익히 알 수 있듯이 조선은 왕권조차 전능하지 못한 절차의 국가였다. 물론 근대적인 삼권 분립과는 거리가 멀지만, 사법과 행정을 통합한 고을 사또, 절도사 혹은 상급 기관의 장에 의해서 송사가 제기되고 심의될 수 있는 기능을 갖추고 있었다.  
 
-## 말로 싸울 수 있게 된 시대 
-혹자는 근대 민주주의 근간인 의회 정치라는 게 소모적이고 파괴적인 '내란'을 대체하기 위한 것이라고 말한다. 즉, 서로 목숨을 내놓고 끝장을 보는 대신 말로 싸우고 승복하며 기회가 되면 또 말로 싸워서 이겨보라는 취지라는 것이다. 
+이런 쟁송의 권리는 신분에 구애받지 않았다. 책이 등장하듯 노비는 재산의 일부로 분쟁의 대상이기도 했지만 그가 억울한 일을 당했을 경우 리를 제소해서 바로잡는 것이 아예 불가능한 사회는 아니었다. 신분제 사회에서 구조적이고 체계적인 불이익이 없었을 리 없겠지만 최후의 수단(last resort)로 노비까지 기댈 수 있는 수단이 있었다는 대목이 놀랍다. 
 
-송사건 정치건 말로 싸우려면 필요한 것이 글자이다. 단순히 소장을 접수하는 문제가 아니다. 책에서 보듯이 당시 쟁송이란 건 "원님 재판"하듯 마음대로 진행된 것이 아니었다. 피고와 원고 양쪽에서 치열하게 증거를 제출했고 이는 대부분 문서의 형태였다. 조선 사회에서 이렇게 송사가 가능하고 번성할 수 있게 된 데에는 세종 대왕의 한글 창제가 크게 기여했다. 한글 창제의 이유처럼 세종은 신분과 관계 없이 백성이 자신의 목소리를 물리적으로 담아 낼 수 있는 큰 그릇을 만든 셈이다. 
+## 과연 우리는 조선에 관해서 제대로 알고 있는가? 
+
+말로 싸울 수 있게 된 시대 혹자는 근대 민주주의 근간인 의회 정치라는 게 소모적이고 파괴적인 ’내란’을 대체하기 위한 것이라고 말한다. 즉, 서로 목숨을 내놓고 끝장을 보는 대신 말로 싸우고 승복하며 기회가 되면 또 말로 싸워서 이겨보라는 취지라는 것이다. 송사건 정치건 말로 싸우려면 필요한 것이 글자이다. 단순히 소장을 접수하는 문제가 아니다. 
+
+책에서 보듯이 당시 쟁송이란 건 “원님 재판”하듯 마음대로 진행된 것이 아니었다. 피고와 원고 양쪽에서 치열하게 증거를 제출했고 이는 대부분 문서의 형태였다. 조선 사회에서 이렇게 송사가 가능하고 번성할 수 있게 된 데에는 세종 대왕의 한글 창제가 크게 기여했다. 한글 창제의 이유처럼 세종은 신분과 관계없이 백성이 자신의 목소리를 물리적으로 담아 낼 수 있는 큰 그릇을 만든 셈이다. 
 
 ## 관료들의 고단함 그리고 전문직 
-오늘날의 관점으로 보면 조선의 송사는 민사와 형사가 뒤섞여 있다. 당시 중앙 뿐 아니라 지방 관료의 생활 역시 무척 피곤했을 것이다. 제출된 소장을 다 검토해야 했고, 오늘날의 관점에서 기소해야할 것과 그렇지 않은 것을 분류하고, 양쪽의 변론을 청취한 뒤 합당한 판결을 내려야 했다. 관청이 수행했던 치안기능까지 고려해보면 DC 코믹스에 등장하는 "저지 드레드"에 가까운 존재가 지방의 사또가 아니었을까 싶다. 이렇듯 막강한 관력을 쥐고 있으니 '탐관오리'로 변질되기도 쉬웠겠지만, 어느 정도 기능을 하려면 아마 자신의 몸과 마음을 갈아 넣어야 했을 것이다. 
 
-이쯤되면 조선 시대에 '변호사'가 없었을까 싶은데 실제로 있더라! 소장을 대신 써주고 백성들에게 생소한 법률 자문을 해주는 "외지부"가 그것이다. 요즘 같이 많은 사람들이 우러러 보는 직업은 아니었다고 한다. 외지부는 행정 절차를 방해하는 것으로 여겨져서 벌을 받기도 했다고 한다. 하지만 그 기능만은 요즘 변호사 못지 않았던 것 같다. 배심원 제도가 생기면서 배심원에게 호소하는 목적의 소송 변호사가 따로 생겨났듯이, 저 시대의 가장 중요한 외지부의 자질은 자신의 딱한 사정을 호소하는 필력 그리고 격쟁 시 울려퍼지는 비통한 울음소리 같은 극적 연출이었다. 
+오늘날의 관점으로 보면 조선의 송사는 민사와 형사가 뒤섞여 있다. 당시 중앙 뿐 아니라 지방 관료의 생활 역시 무척 피곤했을 것이다. 제출된 소장을 다 검토해야 했고, 오늘날의 관점에서 기소해야 할 것과 그렇지 않은 것을 분류하고, 양쪽의 변론을 청취한 뒤 합당한 판결을 내려야 했다. 관청이 수행했던 치안기능까지 고려해보면 DC 코믹스에 등장하는 “저지 드레드”에 가까운 존재가 지방의 사또가 아니었을까 싶다. 이렇듯 막강한 관력을 쥐고 있으니 ’탐관오리’로 변질되기도 쉬웠겠지만, 어느 정도 기능을 하려면 아마 자신의 몸과 마음을 갈아 넣어야 했을 것이다. 
+
+이쯤되면 조선 시대에 ’변호사’가 없었을까 싶은데 실제로 있더라! 소장을 대신 써주고 백성들에게 생소한 법률 자문을 해주는 “외지부”가 그것이다. 요즘 같이 많은 사람들이 우러러보는 직업은 아니었다고 한다. 외지부는 행정 절차를 방해하는 것으로 여겨져서 벌을 받기도 했다고 한다. 하지만 그 기능만은 요즘 변호사 못지 않았던 것 같다. 배심원 제도가 생기면서 배심원에게 호소하는 목적의 소송 변호사가 따로 생겨났듯이, 저 시대의 가장 중요한 외지부의 자질은 자신의 딱한 사정을 호소하는 필력 그리고 격쟁 시 울려 퍼지는 비통한 울음소리 같은 극적 연출이었다. 
 
 ## 큰 그림이 함께 있었다면 
 
-저자가 책에 적었듯이 조선에서 벌어진 쟁송 혹은 형식을 갖춘 분쟁의 역사가 이토록 풍부하게 남아 있다면, 좀 더 큰 그림을 체계적으로 봤으면 싶었다. 물론 이는 책의 목적이 아니다. 재미있는 사례를 발굴하기 위해서 예외적인 경우 위주로 소개된 것은 아닐까, 하는 생각이 문득 들었다. 조선 시대의 법적 풍경에 관한 조금 더 큰 그림을 통계와 숫자로 알려주는 짧은 대목이 하나 들어가 있다면 어땠을까 싶다. 
+저자가 책에 적었듯이 조선에서 벌어진 쟁송 혹은 형식을 갖춘 분쟁의 역사가 이토록 풍부하게 남아 있다면, 좀 더 큰 그림을 체계적으로 봤으면 싶었다. 물론 이는 책의 목적이 아니다. 재미있는 사례를 발굴하기 위해서 예외적인 경우 위주로 소개된 것은 아닐까, 하는 생각이 문득 들었다. 조선 시대의 법적 풍경에 관한 조금 더 큰 그림을 통계와 숫자로 알려주는 짧은 대목이 하나 들어가 있다면 어땠을까 싶다.
 
 ## 인용 
 
