--- a/posts/the-lectures/2024-02-07-statquest-w2v.qmd
+++ b/posts/the-lectures/2024-02-07-statquest-w2v.qmd
@@ -65,7 +65,7 @@ w2v의 기본 아이디어 위주로 정리해보자.
 딱 봐도 너무 복잡하지 않나? 이 녀석들을 한방에 학습시키려면 너무 오랜 시간과 자원이 소모될 것이다. 그래서 조금 꼼수를 고안해볼 수 있을 것이다. 특정 단어를 예측하는데 필요한 단어를 임의로 선택하고 이 녀석의 연결망만 학습시키는 것이다. 이를 negative sampling이라고 한다.
 
 ::: {layout="[-1, 5, -1]"}
-![Divide and Conquer!](./images/w2v/w2v-5.png)
+![Divide and Conquer! 그림에서 보듯이 "A"를 예측하기 위해서 "aardvark", "abandon"만을 남긴다. 산출에서 "aardvark"도 고려하지 않아도 된다. 이렇게 하면 학습해야 할 웨이트의 수가 300개로 줄어든다.](./images/w2v/w2v-5.png)
 :::
 
 
