--- a/posts/the-lectures/2024-02-07-statquest-w2v.qmd
+++ b/posts/the-lectures/2024-02-07-statquest-w2v.qmd
@@ -48,13 +48,13 @@ w2v의 기본 아이디어 위주로 정리해보자.
 ![신경망을 구성해보자.](./images/w2v/w2v-2.png)
 :::
 
-이제 신경망을 구성해서 학습을 시킬 차례다. 투입은 당연히 각 단어의 벡터이다. 즉 해당 단어만을 1로 처리하고 나머지를 0으로 둔 벡터다. 아웃풋은 예측치가 된다. 해당 단어 뒤에 나올 말이다. 녀석을 쭉 학습시킬 때 바람직한 결과란 뒤에 나올 말을 잘 맞추는 녀석일 것이다. 
+이제 신경망을 구성해서 학습을 시킬 차례다. 투입은 당연히 각 단어의 벡터이다. 해당 단어만을 1로 처리하고 나머지를 0으로 둔다. 산출 즉 아웃풋은 뒤에 나올 단어의 예측치가 된다. 이 뉴럴넷을 학습시킬 때 좋은 결과란 뒤에 나올 말을 잘 맞추는 것이다. 
 
 ::: {layout="[-1, 5, -1]"}
 ![신경망의 투입이 예측(뒤에 나올 단어)을 잘 맞출 수 있도록 네트워크의 웨이트를 조율해나간다.](./images/w2v/w2v-3.png)
 :::
 
-물론 실전 뉴럴넷의 파라미터 차원을 훨씬 복잡하다. 그림에서 보듯이 학습에 단어 3백만개 쓰고, 100개의 액티베이션 펑션이 있다고 하자. 별로 복잡하지 않은 아래 그림과 같은 구조에서도 6억 개의 웨이트가 필요하다. 
+물론 실전 뉴럴넷의 파라미터 차원이 훨씬 복잡하다. 그림에서 보듯이 학습에 단어 3백만 개와 100개의 액티베이션 펑션이 있다고 하자. 아래 그림에 보듯이, 3백만 X 100 X 2 해서 6억 개의 웨이트가 필요하다. 
 
 ## Negative Sampling 
 
